--- a/index.html
+++ b/index.html
@@ -9,26 +9,26 @@
     <script src="https://kit.fontawesome.com/dd8ca4d5e5.js" crossorigin="anonymous"></script>
 </head>
 <body>
-    <section id="AboutMe">
+    <section id="about-me">
         <nav>
             <div class="personal_logo">Saishen Pillay</div>
             <ul class="nav__link--list">
-              <li>
-                <a href="" class="
+              <li class="nav__link">
+                <a href="#languages" class="
                 nav__link--anchor
                 link__hover-effect
                 link__hover-effect--black
                 ">Languages</a>
               </li>  
-              <li>
-                <a href="" class="
+              <li class="nav__link">
+                <a href="#projects" class="
                 nav__link--anchor
                 link__hover-effect
                 link__hover-effect--black
                 ">Projects</a>
               </li>  
-              <li>
-                <a href="" class="
+              <li class="nav__link">
+                <a href="mailto:email@email.com" class="
                 nav__link--anchor
                 nav__link--anchor-primary
                 ">Contact</a>
@@ -42,7 +42,7 @@
                         <img src="./images/Blackpanther.jpg" class="about-me__picture">
                     </figure>
                     <h1 class="about-me__info--title">
-                        Hey! I'm <span class="text-blue">Saishen Pillay</span> 👋
+                        Hey! I'm <span class="text-blue">Saishen Pillay</span>&nbsp;<span class="wave">👋</span>
                     </h1>
                     <p class="about-me__info--para">
                         I'm a <strong class="text--blue">Software Engineer</strong>, I have great skills in HTML, CSS, JavaScript
